2010-08-31  Andreas Kupries <andreask@activestate.com>

	* Various cleanups, local patches of ActiveState.
	* exp_clib.c: Remove local copy of Tcl_ErrnoMsg().
	* exp_inter.c: Hack access to TCL_REG_BOSONLY when not present,
	became private with Tcl 8.5 and higher.
	* expect.h: Remove the local fiddling with the memory allocation
	and panic macros.

	* Dbg.c: [Bug 2972727]: Applied the parts of Larry Virden's patch
	  which were still current. Most of it applied to the partially
	  ansified sources we had in trunk for a time and where errors in
	  that set of changes, thus out of date now.

	* example/unbuffer: [Bug 2949748]: Applied patch by Vitezslav
	  Crhonek <vcrhonek@users.sourceforge.net> to prevent unbuffer
	  from eating the exit code of the command it ran (regular mode
	  only, not -p). Slightly modified, I removed the superfluous
	  'eval' used to invoke 'wait', invoking it directly.

2010-08-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* retoglob.c: Fail if the generated glob contains more than
	two asterisks.  Fixes [Expect SF Bug 3010684] (cederqvist)

	* exp_main_sub.c: add return to silence compiler warning.
	Updated EXP_VERSION to 5.45.0

	* config.guess, config.sub, expect.m4 (removed):
	* configure, configure.in, tclconfig/tcl.m4: Update to TEA 3.9
	* Makefile.in, aclocal.m4: Partial cleanup of the build system.
	* testsuite/Makefile.in:   Remove unused EXP_ from configure.in
	* testsuite/aclocal.m4:    and no longer use Tk.
	* testsuite/configure:     Update testsuite bits to use TEA info.
	* testsuite/configure.in:
	Update expect to version 5.45

	* Dbg.c: account for removal of tcldbgcf.h
	* DbgMkfl.in, Dbgconfig.in, Dbgconfigure, DbgpkgInd.in (removed):
	* tcldbgcf.h.in (removed): removed Dbg debugger subcomponent as it
	no longer built and debugger functionality is included in expect
	library and binary

	* pty_termios.c: add HAVE_STRING_H include string.h
	* exp_trap.c: add HAVE_STRING_H include string.h
